# poetry_test

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/poetry_t/: __init__.py
