[tool.poetry]
name = "poetry-t"
version = "0.0.0"
description = "wavファイルのチャンネルを組み合わせる"
authors = ["ymorishima030 <ymorishima030@hochiki.co.jp>"]
readme = "README.md"
packages = [{include = "poetry_t", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pyproject-flake8 = "^6.1.0"
isort = "^5.13.2"
black = "^23.12.0"
ipykernel = "^6.27.1"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203, W502, W503"
exclude = ".venv"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true

[tool.poetry-dynamic-versioning]
enable = true
format = "{base}"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)$"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.2.0"]
build-backend = "poetry_dynamic_versioning.backend"
